<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bactivity_constraint_layout_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_layout_two_constraint_layout"
		android:layout_width="@dimen/bactivity_constraint_layout_two_constraint_layout_width"
		android:layout_height="@dimen/bactivity_constraint_layout_two_constraint_layout_height"
		android:layout_marginTop="@dimen/bactivity_constraint_layout_two_constraint_layout_margin_top"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="40dp"
		tools:layout_editor_absoluteY="40dp">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/group7_constraint_layout"
			android:layout_width="@dimen/bactivity_group7_constraint_layout_width"
			android:layout_height="@dimen/bactivity_group7_constraint_layout_height"
			android:background="@drawable/bactivity_group7_constraint_layout_background"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp">
		
			<ImageView
				android:id="@+id/arrow_image_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/bactivity_arrow_image_view_margin_end"
				android:layout_marginStart="@dimen/bactivity_arrow_image_view_margin_start"
				android:scaleType="center"
				android:src="@drawable/arrow"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_weight="0.15"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="17dp"
				tools:layout_editor_absoluteY="14dp"/>
		</android.support.constraint.ConstraintLayout>
	
		<View
			android:id="@+id/rectangle4_constraint_layout"
			android:layout_width="@dimen/bactivity_rectangle4_constraint_layout_width"
			android:layout_height="@dimen/bactivity_rectangle4_constraint_layout_height"
			android:background="@drawable/bactivity_rectangle4_constraint_layout_background"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="290dp"
			tools:layout_editor_absoluteY="0dp"/>
	
		<ImageView
			android:id="@+id/like_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/bactivity_like_image_view_margin_end"
			android:scaleType="center"
			android:src="@drawable/like"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="302dp"
			tools:layout_editor_absoluteY="12dp"/>
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_layout_three_constraint_layout"
		android:layout_width="@dimen/bactivity_constraint_layout_three_constraint_layout_width"
		android:layout_height="@dimen/bactivity_constraint_layout_three_constraint_layout_height"
		android:layout_marginTop="@dimen/bactivity_constraint_layout_three_constraint_layout_margin_top"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraint_layout_two_constraint_layout"
		tools:layout_editor_absoluteX="40dp"
		tools:layout_editor_absoluteY="100dp">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/constraint_layout_four_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/bactivity_constraint_layout_four_constraint_layout_height"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="392dp">
		
			<TextView
				android:id="@+id/a_widespread_belief_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/bactivity_a_widespread_belief_text_view_margin_top"
				android:gravity="start"
				android:lineSpacingMultiplier="1.47"
				android:textColor="@color/bactivity_a_widespread_belief_text_view_text_color"
				android:textSize="@dimen/bactivity_a_widespread_belief_text_view_text_size"
				app:layout_constraintHorizontal_weight="1"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_view_text_view"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="80dp"
				tools:text="@string/bactivity_a_widespread_belief_text_view_text"/>
		
			<TextView
				android:id="@+id/margherita_text_view"
				android:layout_width="@dimen/bactivity_margherita_text_view_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/bactivity_margherita_text_view_margin_top"
				android:fontFamily="@font/font_poppins_regular"
				android:gravity="start"
				android:text="@string/bactivity_margherita_text_view_text"
				android:textColor="@color/bactivity_margherita_text_view_text_color"
				android:textSize="@dimen/bactivity_margherita_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="24dp"/>
		
			<TextView
				android:id="@+id/text_view_text_view"
				android:layout_width="@dimen/bactivity_text_view_text_view_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/bactivity_text_view_text_view_margin_top"
				android:fontFamily="@font/font_poppins_regular"
				android:gravity="end"
				android:textColor="@color/bactivity_text_view_text_view_text_color"
				android:textSize="@dimen/bactivity_text_view_text_view_text_size"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="267dp"
				tools:layout_editor_absoluteY="24dp"
				tools:text="@string/bactivity_text_view_text_view_text"/>
		
			<TextView
				android:id="@+id/pizza_text_view"
				android:layout_width="@dimen/bactivity_pizza_text_view_width"
				android:layout_height="wrap_content"
				android:fontFamily="@font/font_poppins_regular"
				android:gravity="start"
				android:text="@string/bactivity_pizza_text_view_text"
				android:textColor="@color/bactivity_pizza_text_view_text_color"
				android:textSize="@dimen/bactivity_pizza_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp"/>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/constraint_layout_five_constraint_layout"
			android:layout_width="@dimen/bactivity_constraint_layout_five_constraint_layout_width"
			android:layout_height="@dimen/bactivity_constraint_layout_five_constraint_layout_height"
			android:layout_marginStart="@dimen/bactivity_constraint_layout_five_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/bactivity_constraint_layout_five_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/image_view_image_view"
			tools:layout_editor_absoluteX="68dp"
			tools:layout_editor_absoluteY="302dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/group20_constraint_layout"
				android:layout_width="@dimen/bactivity_group20_constraint_layout_width"
				android:layout_height="@dimen/bactivity_group20_constraint_layout_height"
				android:background="@drawable/bactivity_group20_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<TextView
					android:id="@+id/s_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/bactivity_s_text_view_margin_end"
					android:layout_marginStart="@dimen/bactivity_s_text_view_margin_start"
					android:gravity="center"
					android:text="@string/bactivity_s_text_view_text"
					android:textColor="@color/bactivity_s_text_view_text_color"
					android:textSize="@dimen/bactivity_s_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_weight="0.2"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="20dp"
					tools:layout_editor_absoluteY="17dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/group21_constraint_layout"
				android:layout_width="@dimen/bactivity_group21_constraint_layout_width"
				android:layout_height="@dimen/bactivity_group21_constraint_layout_height"
				android:background="@drawable/bactivity_group21_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="70dp"
				tools:layout_editor_absoluteY="0dp">
			
				<TextView
					android:id="@+id/m_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/bactivity_m_text_view_margin_end"
					android:layout_marginStart="@dimen/bactivity_m_text_view_margin_start"
					android:gravity="center"
					android:text="@string/bactivity_m_text_view_text"
					android:textColor="@color/bactivity_m_text_view_text_color"
					android:textSize="@dimen/bactivity_m_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_weight="0.26"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="19dp"
					tools:layout_editor_absoluteY="17dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/group22_constraint_layout"
				android:layout_width="@dimen/bactivity_group22_constraint_layout_width"
				android:layout_height="@dimen/bactivity_group22_constraint_layout_height"
				android:background="@drawable/bactivity_group22_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="140dp"
				tools:layout_editor_absoluteY="0dp">
			
				<TextView
					android:id="@+id/l_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/bactivity_l_text_view_margin_end"
					android:layout_marginStart="@dimen/bactivity_l_text_view_margin_start"
					android:gravity="center"
					android:text="@string/bactivity_l_text_view_text"
					android:textColor="@color/bactivity_l_text_view_text_color"
					android:textSize="@dimen/bactivity_l_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_weight="0.28"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="18dp"
					tools:layout_editor_absoluteY="17dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<ImageView
			android:id="@+id/image_view_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleType="centerCrop"
			android:src="@drawable/_1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="26dp"
			tools:layout_editor_absoluteY="0dp"/>
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_layout_six_constraint_layout"
		android:layout_width="@dimen/bactivity_constraint_layout_six_constraint_layout_width"
		android:layout_height="@dimen/bactivity_constraint_layout_six_constraint_layout_height"
		android:layout_marginBottom="@dimen/bactivity_constraint_layout_six_constraint_layout_margin_bottom"
		android:background="@color/bactivity_constraint_layout_six_constraint_layout_background_color"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="40dp"
		tools:layout_editor_absoluteY="723dp">
	
		<TextView
			android:id="@+id/add_to_cart_text_view"
			android:layout_width="@dimen/bactivity_add_to_cart_text_view_width"
			android:layout_height="wrap_content"
			android:fontFamily="@font/font_poppins_regular"
			android:gravity="center"
			android:text="@string/bactivity_add_to_cart_text_view_text"
			android:textColor="@color/bactivity_add_to_cart_text_view_text_color"
			android:textSize="@dimen/bactivity_add_to_cart_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="114dp"
			tools:layout_editor_absoluteY="17dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>